<?xml version="1.0"?>
<package>
  <name>gps_common</name>
  <version>0.1.6</version>
  <description>GPS messages and common routines for use in GPS drivers</description>

  <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Roehling</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gps_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
